<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/healthTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loveTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/love"
        app:layout_constraintEnd_toStartOf="@+id/lovePointsTextViewID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/lovePointsTextViewID"
        app:layout_constraintStart_toStartOf="@+id/healthTextViewID"
        tools:layout_editor_absoluteY="16dp" />

    <ProgressBar
        android:id="@+id/healthBarID"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toEndOf="@+id/healthTextViewID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/petButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTextViewID" />

    <TextView
        android:id="@+id/lovePointsTextViewID"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/feedTreatID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_treat"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedBowlID"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/feedBowlID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_bowl"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedBigBowlID"
        app:layout_constraintStart_toEndOf="@+id/feedTreatID" />

    <Button
        android:id="@+id/feedBigBowlID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_big_bowl"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedRibsID"
        app:layout_constraintStart_toEndOf="@+id/feedBowlID" />

    <Button
        android:id="@+id/feedRibsID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_ribs"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedChickenID"
        app:layout_constraintStart_toEndOf="@+id/feedBigBowlID" />

    <Button
        android:id="@+id/feedChickenID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_chicken"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedSteakID"
        app:layout_constraintStart_toEndOf="@+id/feedRibsID" />

    <Button
        android:id="@+id/feedSteakID"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onFoodButtonClicked"
        android:text="@string/feed_steak"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feedChickenID" />

    <ImageView
        android:id="@+id/petImageID"
        android:layout_width="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/feedBigBowlID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewID"
        app:srcCompat="@drawable/ic_dog" />

</android.support.constraint.ConstraintLayout>